<resources>
    <string name="app_name">Future Home(O.M)</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receptions">Receptions</string>
    <string name="your_have_no_history_yet">Your have no History Yet</string>
    <string name="descreption">Descreption</string>
    <string name="write_note">Write Note</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="m">m</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_adress">Enter Adress</string>
    <string name="your_cart_is_empty">your Cart is empty</string>
    <string name="submit_order">Submit Order</string>
    <string name="corridors">Corridors</string>
    <string name="bed_rooms">Bed rooms</string>
    <string name="kitchens">Kitchens</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="units_and_librarys">Units And Librarys</string>
    <string name="living_rooms">Living rooms</string>
    <string name="orders_history">Orders History</string>
    <string name="addresses">Addresses</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="logout">LogOUT</string>
    <string name="welcome">Welcome</string>
    <string name="OrderSubmited">Order Submited</string>
    <string name="Retry">Retry</string>
    <string name="pleaseCheckYourInternet">please check your internet connection!</string>
    <string name="TheHeightCant0">The Height Can\'t be 0</string>
    <string name="TheWidthCant0">The Width Can\'t be 0</string>
    <string name="Delete">Delete?</string>
    <string name="AreyousurewanttoDelete">Are you sure want to Delete this file?</string>
    <string name="Deletee">Delete</string>
    <string name="Cancell">Cancel</string>
    <string name="MyHistory">My History</string>
    <string name="orderdeleted">order deleted</string>
    <string name="pleaseEnterWidthandHeight">please enter Width and Height</string>
    <string name="addedtoCart">added to Cart</string>
    <string name="pleaseentervalidEmail">please enter a valid Email</string>
    <string name="passwordmustWritepassword">please must Write password</string>
    <string name="loggedin">logged in</string>
    <string name="error_in_password_or_name">Error in Password or Email</string>
    <string name="please_confirm_the_email">please confirm the email</string>
    <string name="logged_for_many_times">logged for many times</string>
    <string name="multi_logged_for_many_Devices">multi logged for many Devices</string>
    <string name="LogOut">LogOut?</string>
    <string name="Are_you_sure_want_to_Logout">Are you sure want to Logout?</string>
    <string name="LogOutt">LogOut</string>
    <string name="cancell">Cancel</string>
    <string name="Connectus">Connect us</string>
    <string name="OmarMarmoush">Omar Marmoush</string>
    <string name="MomenElsaka">Momen Elsaka</string>
    <string name="MishoElzamly">Misho Elzamly</string>
    <string name="Address">Address</string>
    <string name="LocationOnMap">Location On Map</string>
    <string name="AnsarAlSona">57 Ansar AlSona, ElArbean, Ezpt Elnakhl, cairo</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="NamecantbeEmpty">Name can\'t be Empty</string>
    <string name="phone_cant_be_Empty">phone can\'t be Empty</string>
    <string name="AdresscantbeEmpty">Adress can\'t be Empty</string>
    <string name="Saved">Saved</string>
    <string name="MailExist">Mail Exist</string>
    <string name="NetworkError">Network Error</string>
    <string name="DoyouwanttoExite">Do you want to Exite?</string>
    <string name="Exite">Exite</string>
    <string name="ItemDetails">\" Item Details\"</string>
</resources>